stage7_packet7b_validation.txt
== correct Packet 7B patcher ==
  File "/home/runner/work/Buildforme/Buildforme/scripts/fix_stage7_packet7b_patcher.py", line 8
    old = '''    '''        findings: list[dict[str, Any]],
                            ^^^^^^^^
SyntaxError: invalid syntax
statuses fix=1 apply=99 syntax=99 focused=99 full=99 policy=99 constitution=99
